fix: avoid overlapping site footer in print view (#72)

--- a/src/sass/_print.scss
+++ b/src/sass/_print.scss
@@ -30,16 +30,20 @@
     text-decoration: none !important;
   }
 
-  main {
-    flex-direction: column-reverse;
-  }
-
   .gdoc-toc {
     flex: none;
 
     nav {
       position: relative;
       width: auto;
+    }
+  }
+
+  .wrapper {
+    display: block;
+
+    main {
+      display: block;
     }
   }
 }
